RESOLVED FIXED52695
WK2 - Multiple crashes in PlatformCALayer::replaceSublayer
https://bugs.webkit.org/show_bug.cgi?id=52695
Summary WK2 - Multiple crashes in PlatformCALayer::replaceSublayer
Chris Marrin
Reported 2011-01-18 18:49:49 PST
In WK2 making the window > 2000 pixels wide (or high) crashes because we are trying to switch the root layer to be tiled. Since it has no superlayer, there is no way to reattach it, so we crash. In radar 8751147
Attachments
Patch (8.17 KB, patch)
2011-01-18 18:56 PST, Chris Marrin
simon.fraser: review+
Chris Marrin
Comment 1 2011-01-18 18:56:28 PST
Simon Fraser (smfr)
Comment 2 2011-01-18 20:19:46 PST
Comment on attachment 79382 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=79382&action=review > Source/WebKit2/ChangeLog:13 > + Added a hostingLayer as the parent of the existing drawingLayer. > + The hostingLayer is now the root which is passed to the > + remote context. It never changes except to track the size > + of the window. The drawingLayer is now a child of the > + hostingLayer, which allow it to switch between tiled and > + non-tiled. s/drawingLayer/backingLayer > Source/WebKit2/ChangeLog:15 > + I also not give back accurate settings for debug borders and s/not/now
Anders Carlsson
Comment 3 2011-01-19 11:27:02 PST
WebKit Review Bot
Comment 4 2011-01-19 12:03:40 PST
http://trac.webkit.org/changeset/76143 might have broken SnowLeopard Intel Release (Tests)
Note You need to log in before you can comment on or make changes to this bug.