Source/WebKit2/WebProcess/WebPage/LayerBackedDrawingArea.h
@@ -106,6 +106,7 @@ private:
 
     RunLoop::Timer<LayerBackedDrawingArea> m_syncTimer;
 
+    OwnPtr<WebCore::GraphicsLayer> m_hostingLayer;
     OwnPtr<WebCore::GraphicsLayer> m_backingLayer;
 #if PLATFORM(MAC)
 #if HAVE(HOSTED_CORE_ANIMATION)
